[tool.poetry]
name = "lpp"
version = "0.1.0"
description = ""
authors = ["Ruslan <ruslan15-mol@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
wandb = "^0.13.1"
scipy = "^1.9.0"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
