[tool.poetry]
name = "lpp"
version = "0.1.0"
description = ""
authors = ["Ruslan <ruslan15-mol@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
wandb = "^0.13.1"
scipy = "^1.9.0"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
tensorflow = "^2.9.1"
tensorflow-probability = "^0.17.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
